<resources>
    <string name="app_name">校园美食评</string>
    <string name="app_slogan">逛校园，评美食~</string>
    <string name="canteen">食堂/餐厅</string>
    <string name="change_school">切换学校</string>
    <string name="dishes">菜品</string>
    <string name="network_error">网络错误</string>
    <string name="logout">注销</string>
    <string name="search">搜索</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="go_register">还没有账号？立即注册！</string>
    <string name="please_input_username">请填写用户名</string>
    <string name="please_input_password">请填写密码</string>
    <string name="please_input_password_again">请再次填写密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="register">注册</string>
    <string name="go_login">已有账号？立即登陆！</string>
    <string name="please_login">请登录</string>
    <string name="edit_sign">点击编辑个人信息</string>
    <string name="login_discover_more">登陆发现更多精彩~</string>
    <string name="add_comment">发表评论</string>
    <string name="not_same_password">两次密码填写不一致</string>
    <string name="no_content">暂无内容</string>
    <string name="hint">提示</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="confirm_logout">确定要注销吗？</string>
    <string name="please_input_keyword">请输入关键字</string>
    <string name="personal">个人相关</string>
    <string name="my_collection">我的收藏</string>
    <string name="collect">收藏</string>
    <string name="cancel_collection">取消收藏</string>
    <string name="my_comment">我的评论</string>
    <string name="all">全部</string>
    <string name="change_shop">切换商铺</string>
    <string name="find_new_goods">发现新菜品</string>
    <string name="rate_descend">评分↓</string>
    <string name="rate_ascend">评分↑</string>
    <string name="price_ascend">价格↑</string>
    <string name="price_descend">价格↓</string>
    <string name="personal_info">个人信息</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="birth">生日</string>
    <string name="dormitory">宿舍</string>
    <string name="save">保存修改</string>
    <string name="click_to_edit">点击修改</string>
    <string name="add_goods">提交新菜</string>
    <string name="please_select_school">请选择学校</string>
</resources>
