<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout style="@style/AppBarLayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/user_info_toolbar"
            style="@style/Toolbar" />

    </android.support.design.widget.AppBarLayout>

    <fragment
        android:id="@+id/fragment_avatar"
        android:name="com.bit.schoolcomment.fragment.ImagePickFragment"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/InputWrapper">

                <TextView
                    style="@style/InputKey"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/user_info_name"
                    style="@style/InputValue" />

            </LinearLayout>

            <include layout="@layout/layout_divider" />

            <LinearLayout style="@style/InputWrapper">

                <TextView
                    style="@style/InputKey"
                    android:text="@string/sex" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/user_info_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/user_info_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/female" />

                </RadioGroup>

            </LinearLayout>

            <include layout="@layout/layout_divider" />

            <LinearLayout style="@style/InputWrapper">

                <TextView
                    style="@style/InputKey"
                    android:text="@string/birth" />

                <TextView
                    android:id="@+id/user_info_birth"
                    style="@style/InputValue"
                    android:text="@string/click_to_edit" />

            </LinearLayout>

            <include layout="@layout/layout_divider" />

            <LinearLayout style="@style/InputWrapper">

                <TextView
                    style="@style/InputKey"
                    android:text="@string/dormitory" />

                <EditText
                    android:id="@+id/user_info_dormitory"
                    style="@style/InputValue"
                    android:hint="@string/click_to_edit" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/user_info_btn_save"
        style="@style/Button"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/save" />

</LinearLayout>